# wavepy

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
Docs/: API.rst  conf.py  tutorial.rst
Docs/Docs_old_version/: Docs.aux  Docs.out  Docs.run.xml
Docs/_build/doctrees/: environment.pickle  tutorial.doctree
Docs/_build/latex/: wavepy.fdb_latexmk  wavepy.idx  wavepy.ilg  wavepy.ind
docs/: conf.py  how_to.rst
docs/Docs_old_version/: Docs.tex  Docs.toc  Set_Pack.tex  make_docs.py
docs/_build/doctrees/: API.doctree  description.doctree  environment.pickle  how_to.doctree  index.doctree  installation.doctree  tutorial.doctree
docs/_build/html/: .buildinfo  API.html  genindex.html  how_to.html  index.html  installation.html  objects.inv  search.html  searchindex.js  tutorial.html
docs/_build/latex/: wavepy.aux  wavepy.fdb_latexmk  wavepy.fls  wavepy.out  wavepy.tex  wavepy.toc
examples/: example_WaveElements.py  example_b_field.py  example_simple_undu.py  example_spectrum.py  example_wave.py
examples/old/: wavepy_b_field_example_script.py  wavepy_spectrum_example_script.py
quick_tests/: test_WaveElements.py  test_b_field.py  test_spectrum.py  test_wave.py
src/wavepy/: extract_plot_results.py  physical_constants.py  postprocess_wave_files.py  preprocess_wave_files.py  standard_parameters.py  wave.py  wave_elements.py  wavepy_incl.py
src/wavepy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/wavepy/WAVE-In-Files/: wave.in  (+3 more)
test/: .coverage  test_wave.py  test_waveAttribute_waveElement.py
(+103 files in other folders)
